1.0.0/_sources/developers_guide/mesh/generated/polaris.tasks.mesh.spherical.unified.coastline.VizCoastlineStep.rst.txt
polaris.tasks.mesh.spherical.unified.coastline.VizCoastlineStep
===============================================================

.. currentmodule:: polaris.tasks.mesh.spherical.unified.coastline

.. autoclass:: VizCoastlineStep

   
   .. automethod:: __init__

   
   .. rubric:: Methods

   .. autosummary::
   
      ~VizCoastlineStep.__init__
      ~VizCoastlineStep.add_dependency
      ~VizCoastlineStep.add_input_file
      ~VizCoastlineStep.add_output_file
      ~VizCoastlineStep.check_properties
      ~VizCoastlineStep.constrain_resources
      ~VizCoastlineStep.process_inputs_and_outputs
      ~VizCoastlineStep.run
      ~VizCoastlineStep.runtime_setup
      ~VizCoastlineStep.set_resources
      ~VizCoastlineStep.set_shared_config
      ~VizCoastlineStep.setup
      ~VizCoastlineStep.validate_baselines
   
   

   
   
   